clusters/k8s-keiretsu/apps/media/transmission-movies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-movies-tls
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: luke-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: haproxy
  rules:
    - host: transmission-movies.lukehouge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-movies
                port:
                  number: 9091
  tls:
    - secretName: transmission-movies-luke-tls
      hosts:
        - transmission-movies.lukehouge.com
